apps/prod/nj/openapi.smotra.net/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openapi-smotra-net
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.cilium.io/loadbalancer-mode: shared
    # ingress.cilium.io/enforce-https: "false"
    ingress.cilium.io/secure-backends: "false" # Force Cilium to treat the backend as plain HTTP
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - openapi.smotra.net
    secretName: openapi-smotra-net
  rules:
  - host: openapi.smotra.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
